tests/ui/not_enough_bounds.stderr
error[E0277]: the trait bound `Opts: Contains<u32>` is not satisfied
 --> $DIR/not_enough_bounds.rs:4:25
  |
4 |     println!("{}", opts.get::<u32>());
  |                         ^^^ the trait `Contains<u32>` is not implemented for `Opts`
  |
help: consider further restricting this bound
  |
3 | fn not_enough_bounds<Opts: TypeMapGet + Contains<u32>>(opts: &Opts) {
  |                                       ^^^^^^^^^^^^^^^
